--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@supabase/supabase-js": "^2.50.0",
     "framer-motion": "^11.2.11",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
