--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.50.0",
     "framer-motion": "^11.2.11",
+    "keen-slider": "^6.8.6",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
