--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fuse.js": "^7.1.0",
     "keen-slider": "^6.8.6",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
