--- a/package.json
+++ b/package.json
@@ -12,11 +12,23 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.2",
+    "@pmndrs/branding": "^0.0.8",
+    "@react-three/drei": "^9.74.8",
+    "@react-three/fiber": "^8.13.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/three": "^0.152.1",
+    "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.2.11",
     "fuse.js": "^7.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "i": "^0.3.7",
     "keen-slider": "^6.8.6",
+    "maath": "^0.6.0",
+    "npm": "^10.9.4",
     "react": "^18.2.0",
     "react-countdown": "^2.3.6",
     "react-countup": "^6.5.3",
@@ -31,8 +43,15 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.11",
+    "three": "^0.153.0",
     "uuid": "^13.0.0",
-    "zod": "^3.23.8"
+    "valtio": "^1.10.3",
+    "zod": "^3.23.8",
+    "react-to-print": "^2.14.13",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.5.0",
+    "reactour": "^1.19.2",
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.1",
