--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "keen-slider": "^6.8.6",
     "maath": "^0.6.0",
     "npm": "^10.9.4",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.5.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-countdown": "^2.3.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.5.0",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-paystack": "^6.0.0",
@@ -40,18 +44,16 @@
     "react-router-dom": "^6.23.1",
     "react-scroll-into-view": "^2.1.3",
     "react-slick": "^0.30.2",
+    "react-to-print": "^2.14.13",
+    "react-uuid": "^2.0.0",
+    "reactour": "^1.19.2",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.11",
     "three": "^0.153.0",
     "uuid": "^13.0.0",
     "valtio": "^1.10.3",
-    "zod": "^3.23.8",
-    "react-to-print": "^2.14.13",
-    "primeicons": "^6.0.1",
-    "primereact": "^9.5.0",
-    "reactour": "^1.19.2",
-    "react-uuid": "^2.0.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.1",
