--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.2.11",
     "fuse.js": "^7.1.0",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "i": "^0.3.7",
